--- a/e1_proc_base/quartus/proc.qsf
+++ b/e1_proc_base/quartus/proc.qsf
@@ -16,16 +16,16 @@
 #
 # -------------------------------------------------------------------------- #
 #
-# Quartus II 64-Bit
+# Quartus II 32-bit
 # Version 13.0.1 Build 232 06/12/2013 Service Pack 1 SJ Web Edition
-# Date created = 12:01:50  February 27, 2024
+# Date created = 12:23:02  February 27, 2024
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		Etapa1_assignment_defaults.qdf
+#		proc_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -38,12 +38,21 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C20F484C7
-set_global_assignment -name TOP_LEVEL_ENTITY Etapa1
+set_global_assignment -name TOP_LEVEL_ENTITY proc
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:01:50  FEBRUARY 27, 2024"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:23:02  FEBRUARY 27, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name VHDL_FILE Etapa1.vhd
+set_global_assignment -name VHDL_FILE ../src/uc/unidad_control.vhd
+set_global_assignment -name VHDL_FILE ../src/uc/control_l.vhd
+set_global_assignment -name VHDL_FILE ../src/datapath/datapath.vhd
+set_global_assignment -name VHDL_FILE ../src/banco_regs/regfile.vhd
+set_global_assignment -name VHDL_FILE ../src/alu/alu.vhd
+set_global_assignment -name VHDL_FILE ../src/proc.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
