--- a/e2_proc_mem_sub/Etapa 2.1/quartus/proc.qsf
+++ b/e2_proc_mem_sub/Etapa 2.1/quartus/proc.qsf
@@ -46,13 +46,14 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE ../src/uc/multi.vhd
 set_global_assignment -name VHDL_FILE ../src/uc/unidad_control.vhd
 set_global_assignment -name VHDL_FILE ../src/uc/control_l.vhd
 set_global_assignment -name VHDL_FILE ../src/datapath/datapath.vhd
 set_global_assignment -name VHDL_FILE ../src/banco_regs/regfile.vhd
 set_global_assignment -name VHDL_FILE ../src/alu/alu.vhd
 set_global_assignment -name VHDL_FILE ../src/proc.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
