--- a/Etapa 3/quartus/sisa.qsf
+++ b/Etapa 3/quartus/sisa.qsf
@@ -51,11 +51,12 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_FILE ../src/proc/alu/op_arit_log.vhd
-set_global_assignment -name VHDL_FILE ../src/proc/alu/op_comp.vhd
-set_global_assignment -name VHDL_FILE ../src/proc/alu/op_ext_arit.vhd
-set_global_assignment -name VHDL_FILE ../src/proc/alu/op_immed.vhd
-set_global_assignment -name VHDL_FILE ../src/proc/alu/op_movs.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/alu/alu_misc.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/alu/alu_ext_arit.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/alu/alu_comp.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/alu/alu_arit_log.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/packages/package_alu.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/packages/package_opcodes.vhd
 set_global_assignment -name VHDL_FILE ../src/driver7Segmentos.vhd
 set_global_assignment -name VHDL_FILE ../src/sisa.vhd
 set_global_assignment -name VHDL_FILE ../src/mem_ctrl/SRAMController.vhd
