--- a/Etapa 5/quartus/sisa.qsf
+++ b/Etapa 5/quartus/sisa.qsf
@@ -51,6 +51,8 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_FILE ../src/decoder7Segmentos.vhd
+set_global_assignment -name VHDL_FILE ../src/io_ctrl/package_io.vhd
 set_global_assignment -name VHDL_FILE ../src/io_ctrl/controladores_io.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/packages/package_control.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/alu/alu_misc.vhd
@@ -70,4 +72,5 @@ set_global_assignment -name VHDL_FILE ../src/proc/uc/unidad_control.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/uc/multi.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/uc/control_l.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/proc.vhd
+set_global_assignment -name SOURCE_FILE db/sisa.cmp.rdb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
