--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,6 @@ jobs:
   check-compilation:
     runs-on: ubuntu-latest
     steps:
+      - run: git clone https://github.com/SW1073/PEC-SISA
+      - run: cd PEC-SISA/
       - run: make ETAPA=7.1
