--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+image: registry.gitlab.com/axtaor/practicas-ac2:latest\
+
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 
@@ -10,6 +12,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: List Files
+      using: docker
       run: |
         cd ${{ github.workspace }}
         ls -la
+        make ETAPA=6
