--- a/Etapa 72/quartus/sisa.qsf
+++ b/Etapa 72/quartus/sisa.qsf
@@ -498,6 +498,9 @@ set_location_assignment PIN_Y7 -to SRAM_LB_N
 set_location_assignment PIN_T8 -to SRAM_OE_N
 set_location_assignment PIN_W7 -to SRAM_UB_N
 set_location_assignment PIN_AA10 -to SRAM_WE_N
+set_global_assignment -name VHDL_FILE ../src/proc/uc/exception_ctrl.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/uc/illegal_ir.vhd
+set_global_assignment -name VHDL_FILE ../src/proc/packages/package_exceptions.vhd
 set_global_assignment -name VHDL_FILE ../src/io_ctrl/interrupt/key_sw_int_ctrl.vhd
 set_global_assignment -name VHDL_FILE ../src/io_ctrl/interrupt/interrupt_ctrl.vhd
 set_global_assignment -name VHDL_FILE ../src/io_ctrl/interrupt/timer_int_ctrl.vhd
@@ -531,4 +534,5 @@ set_global_assignment -name VHDL_FILE ../src/proc/uc/unidad_control.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/uc/multi.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/uc/control_l.vhd
 set_global_assignment -name VHDL_FILE ../src/proc/proc.vhd
+set_global_assignment -name SOURCE_FILE db/sisa.cmp.rdb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
