--- a/Etapa 8/quartus/sisa.qsf
+++ b/Etapa 8/quartus/sisa.qsf
@@ -540,3 +540,4 @@ set_global_assignment -name SOURCE_FILE db/sisa.cmp.rdb
 set_global_assignment -name OPTIMIZE_HOLD_TIMING "IO PATHS AND MINIMUM TPD PATHS"
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name FITTER_EFFORT "AUTO FIT"
